hphp/test/zend/good/ext/posix/tests/posix_strerror_variation1.php.expectf
*** Testing posix_strerror() : usage variations ***

Notice: Undefined variable: undefined_var in %s/posix_strerror_variation1.php on line 52

Notice: Undefined variable: unset_var in %s/posix_strerror_variation1.php on line 55

Arg value 10.5
string

Arg value -10.5
string

Arg value 101234567000
string

Arg value 1.07654321E-9
string

Arg value 0.5
string

Notice: Array to string conversion in %s/posix_strerror_variation1.php on line 64

Arg value Array

Warning: posix_strerror() expects parameter 1 to be integer, array given in %s/posix_strerror_variation1.php on line 65

Notice: Array to string conversion in %s/posix_strerror_variation1.php on line 64

Arg value Array

Warning: posix_strerror() expects parameter 1 to be integer, array given in %s/posix_strerror_variation1.php on line 65

Notice: Array to string conversion in %s/posix_strerror_variation1.php on line 64

Arg value Array

Warning: posix_strerror() expects parameter 1 to be integer, array given in %s/posix_strerror_variation1.php on line 65

Notice: Array to string conversion in %s/posix_strerror_variation1.php on line 64

Arg value Array

Warning: posix_strerror() expects parameter 1 to be integer, array given in %s/posix_strerror_variation1.php on line 65

Notice: Array to string conversion in %s/posix_strerror_variation1.php on line 64

Arg value Array

Warning: posix_strerror() expects parameter 1 to be integer, array given in %s/posix_strerror_variation1.php on line 65

Arg value 
string

Arg value 
string

Arg value 1
string

Arg value 
string

Arg value 1
string

Arg value 
string

Arg value 

Warning: posix_strerror() expects parameter 1 to be integer, string given in %s/posix_strerror_variation1.php on line 65

Arg value 

Warning: posix_strerror() expects parameter 1 to be integer, string given in %s/posix_strerror_variation1.php on line 65

Arg value string

Warning: posix_strerror() expects parameter 1 to be integer, string given in %s/posix_strerror_variation1.php on line 65

Arg value string

Warning: posix_strerror() expects parameter 1 to be integer, string given in %s/posix_strerror_variation1.php on line 65

Arg value 
string

Arg value 
string

Catchable fatal error: Object of class stdClass could not be converted to string in %s/posix_strerror_variation1.php on line 64
